서비스로직 리팩토링